@@ -3,6 +3,8 @@
 	* Support Mathieu functions via GSL
 	* Added global settings for numbers
 	* Support real scientific notation and improve other notations of axes label
+	* Export worksheet to more image formats (jpg, bmp, ppm, xbm, xpm)
+	* Improved range auto scaling
 	* [spreadsheet]:
 		* Allow to freeze the first column
 	* [worksheet]:
